# git-metadata

./: .gitignore  .rules  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.config/: committed.toml  deny.toml  pre-commit.yaml  release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml  CI.yml  Lint.yml
crates/git-metadata/: CHANGELOG.md  Cargo.toml
crates/git-metadata/src/: cli.rs  main.rs
crates/gix-metadata/: Cargo.toml
crates/gix-metadata/src/: error.rs  lib.rs  metadata.rs  repository.rs
crates/gix-metadata/tests/: exe.rs  metadata_delete.rs
crates/gix-metadata/tests/common/: mod.rs
crates/gix-metadata/tests/find_metadata/: errors.rs  examples.rs  property.rs  table.rs
crates/gix-metadata/tests/metadata/: errors.rs  examples.rs  property.rs  table.rs
crates/gix-metadata/tests/metadata_delete/: errors.rs  examples.rs  property.rs  table.rs
crates/gix-metadata/tests/metadatas/: default_fanout.rs  default_ref.rs  examples.rs  fanout.rs  property.rs  ref_fanout_property.rs  ref_fanout_table.rs  table.rs
src/: cli.rs  error.rs  exe.rs  lib.rs  main.rs  metadata.rs  repository.rs  tests.rs  tree.rs
src/tests/: tree.rs
tests/: exe.rs  find_metadata.rs  metadata.rs  metadatas.rs
tests/common/: mod.rs
tests/find_metadata/: errors.rs  examples.rs  helpers.rs  property.rs  table.rs
tests/metadata/: errors.rs  examples.rs  helpers.rs  property.proptest-regressions  property.rs  table.rs
tests/metadata_delete/: errors.rs  examples.rs  property.rs  table.rs
tests/metadatas/: default_fanout.rs  default_ref.rs  examples.rs  fanout.rs  helpers.rs  property.rs  ref_fanout_property.rs  ref_fanout_table.rs  table.rs
