[package]
name = "git-metadata"
version = "0.3.0-rc.1"
edition = "2024"
publish = true
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Porcelain for adding metadata to any git object without rewriting history."
repository = "https://github.com/git-ents/git-metadata"
homepage = "https://github.com/git-ents/git-metadata"
documentation = "https://docs.rs/git-metadata"

[[bin]]
name = "git-metadata"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap", "dep:clap_mangen", "dep:edit", "dep:termtree"]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
clap_mangen = { version = "0.2.31", optional = true }
edit = { version = "0.1.5", optional = true }
termtree = { version = "0.4", optional = true }
gix = { version = "0.83.0", features = ["tree-editor"] }
thiserror = "2.0.18"

[dev-dependencies]
gix = { version = "0.83.0", features = ["sha256"] }
proptest = "1.5.0"
rstest = "0.23.0"
tempfile = "3.27.0"
