[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.0-rc.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/git-ents/git-metadata"
homepage = "https://github.com/git-ents/git-metadata"

[workspace.dependencies]
gix = { version = "0.83.0", features = ["tree-editor", "merge"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
edit = "0.1.5"
termtree = "0.4"
proptest = "1.5.0"
rstest = "0.23.0"
tempfile = "3.27.0"
